// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comments > comment 1`] = `
{
  "children": [],
  "data": {},
  "name": "number",
  "value": 123,
}
`;

exports[`comments > comment block 1`] = `
{
  "children": [],
  "data": {},
  "name": "number",
  "value": 123,
}
`;

exports[`examples > procedural > fibonacci 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "fib",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "n",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "name",
                                  "value": "n",
                                },
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "number",
                                  "value": 2,
                                },
                              ],
                              "data": {},
                              "name": "operator",
                              "value": "<",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "number",
                                  "value": 1,
                                },
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "placeholder",
                                },
                              ],
                              "data": {},
                              "name": "operator",
                              "value": ";",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "data": {},
                                      "name": "name",
                                      "value": "fib",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "data": {},
                                              "name": "name",
                                              "value": "n",
                                            },
                                            {
                                              "children": [],
                                              "data": {},
                                              "name": "number",
                                              "value": 1,
                                            },
                                          ],
                                          "data": {},
                                          "name": "operator",
                                          "value": "-",
                                        },
                                      ],
                                      "data": {},
                                      "name": "group",
                                      "value": "parens",
                                    },
                                  ],
                                  "data": {},
                                  "name": "operator",
                                  "value": "application",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "data": {},
                                      "name": "name",
                                      "value": "fib",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "data": {},
                                              "name": "name",
                                              "value": "n",
                                            },
                                            {
                                              "children": [],
                                              "data": {},
                                              "name": "number",
                                              "value": 2,
                                            },
                                          ],
                                          "data": {},
                                          "name": "operator",
                                          "value": "-",
                                        },
                                      ],
                                      "data": {},
                                      "name": "group",
                                      "value": "parens",
                                    },
                                  ],
                                  "data": {},
                                  "name": "operator",
                                  "value": "application",
                                },
                              ],
                              "data": {},
                              "name": "operator",
                              "value": "+",
                            },
                          ],
                          "data": {},
                          "name": "operator",
                          "value": "ifElse",
                        },
                        {
                          "children": [],
                          "data": {},
                          "name": "placeholder",
                        },
                      ],
                      "data": {},
                      "name": "operator",
                      "value": ";",
                    },
                  ],
                  "data": {},
                  "name": "group",
                  "value": "braces",
                },
              ],
              "data": {},
              "name": "operator",
              "value": "->",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "export",
    },
  ],
  "data": {},
  "name": "program",
}
`;

exports[`examples > procedural > hello world 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "println",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "external",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "args",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {},
                              "name": "name",
                              "value": "println",
                            },
                            {
                              "children": [],
                              "data": {},
                              "name": "string",
                              "value": "Hello, World!",
                            },
                          ],
                          "data": {},
                          "name": "operator",
                          "value": "application",
                        },
                        {
                          "children": [],
                          "data": {},
                          "name": "placeholder",
                        },
                      ],
                      "data": {},
                      "name": "operator",
                      "value": ";",
                    },
                  ],
                  "data": {},
                  "name": "group",
                  "value": "braces",
                },
              ],
              "data": {},
              "name": "operator",
              "value": "->",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "export",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "program",
}
`;

exports[`expressions > arithmetics > add 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > arithmetics > decrement 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "prefixDecrement",
}
`;

exports[`expressions > arithmetics > divide 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "/",
}
`;

exports[`expressions > arithmetics > increment 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "prefixIncrement",
}
`;

exports[`expressions > arithmetics > modulo 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "%",
}
`;

exports[`expressions > arithmetics > multiply 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "*",
}
`;

exports[`expressions > arithmetics > negate 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "negate",
}
`;

exports[`expressions > arithmetics > postfix decrement 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "postfixDecrement",
}
`;

exports[`expressions > arithmetics > postfix increment 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "postfixIncrement",
}
`;

exports[`expressions > arithmetics > power 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "^",
}
`;

exports[`expressions > arithmetics > produces correct tree for '(2^2-5+7)-(-i)+ (j)/0 - 1*(1*f)+(27-x )/q + send(-(2+7)/A,j, i, 127.0 ) + 1/1' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [],
                                          "data": {},
                                          "name": "number",
                                          "value": 2,
                                        },
                                        {
                                          "children": [],
                                          "data": {},
                                          "name": "number",
                                          "value": 2,
                                        },
                                      ],
                                      "data": {},
                                      "name": "operator",
                                      "value": "^",
                                    },
                                    {
                                      "children": [],
                                      "data": {},
                                      "name": "number",
                                      "value": 5,
                                    },
                                  ],
                                  "data": {},
                                  "name": "operator",
                                  "value": "-",
                                },
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "number",
                                  "value": 7,
                                },
                              ],
                              "data": {},
                              "name": "operator",
                              "value": "+",
                            },
                          ],
                          "data": {},
                          "name": "group",
                          "value": "parens",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "name",
                                  "value": "i",
                                },
                              ],
                              "data": {},
                              "name": "operator",
                              "value": "negate",
                            },
                          ],
                          "data": {},
                          "name": "group",
                          "value": "parens",
                        },
                      ],
                      "data": {},
                      "name": "operator",
                      "value": "-",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {},
                              "name": "name",
                              "value": "j",
                            },
                          ],
                          "data": {},
                          "name": "group",
                          "value": "parens",
                        },
                        {
                          "children": [],
                          "data": {},
                          "name": "number",
                          "value": 0,
                        },
                      ],
                      "data": {},
                      "name": "operator",
                      "value": "/",
                    },
                  ],
                  "data": {},
                  "name": "operator",
                  "value": "+",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "data": {},
                      "name": "number",
                      "value": 1,
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {},
                              "name": "number",
                              "value": 1,
                            },
                            {
                              "children": [],
                              "data": {},
                              "name": "name",
                              "value": "f",
                            },
                          ],
                          "data": {},
                          "name": "operator",
                          "value": "*",
                        },
                      ],
                      "data": {},
                      "name": "group",
                      "value": "parens",
                    },
                  ],
                  "data": {},
                  "name": "operator",
                  "value": "*",
                },
              ],
              "data": {},
              "name": "operator",
              "value": "-",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {},
                          "name": "number",
                          "value": 27,
                        },
                        {
                          "children": [],
                          "data": {},
                          "name": "name",
                          "value": "x",
                        },
                      ],
                      "data": {},
                      "name": "operator",
                      "value": "-",
                    },
                  ],
                  "data": {},
                  "name": "group",
                  "value": "parens",
                },
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "q",
                },
              ],
              "data": {},
              "name": "operator",
              "value": "/",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "send",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "data": {},
                                              "name": "number",
                                              "value": 2,
                                            },
                                            {
                                              "children": [],
                                              "data": {},
                                              "name": "number",
                                              "value": 7,
                                            },
                                          ],
                                          "data": {},
                                          "name": "operator",
                                          "value": "+",
                                        },
                                      ],
                                      "data": {},
                                      "name": "group",
                                      "value": "parens",
                                    },
                                  ],
                                  "data": {},
                                  "name": "operator",
                                  "value": "negate",
                                },
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "name",
                                  "value": "A",
                                },
                              ],
                              "data": {},
                              "name": "operator",
                              "value": "/",
                            },
                            {
                              "children": [],
                              "data": {},
                              "name": "name",
                              "value": "j",
                            },
                          ],
                          "data": {},
                          "name": "operator",
                          "value": ",",
                        },
                        {
                          "children": [],
                          "data": {},
                          "name": "name",
                          "value": "i",
                        },
                      ],
                      "data": {},
                      "name": "operator",
                      "value": ",",
                    },
                    {
                      "children": [],
                      "data": {},
                      "name": "number",
                      "value": 127,
                    },
                  ],
                  "data": {},
                  "name": "operator",
                  "value": ",",
                },
              ],
              "data": {},
              "name": "group",
              "value": "parens",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "application",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "+",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "/",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > arithmetics > produces correct tree for '++i' 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "i",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "prefixIncrement",
}
`;

exports[`expressions > arithmetics > produces correct tree for '-(a+b)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "negate",
}
`;

exports[`expressions > arithmetics > produces correct tree for '--i' 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "i",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "prefixDecrement",
}
`;

exports[`expressions > arithmetics > produces correct tree for '1 + 2^3 * 4' 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 1,
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "^",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 4,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "*",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > arithmetics > subtract 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "-",
}
`;

exports[`expressions > boolean expressions > and 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "and",
}
`;

exports[`expressions > boolean expressions > comparators > comparator < 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "<",
}
`;

exports[`expressions > boolean expressions > comparators > comparator <= 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "<=",
}
`;

exports[`expressions > boolean expressions > comparators > comparator > 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": ">",
}
`;

exports[`expressions > boolean expressions > comparators > comparator >= 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": ">=",
}
`;

exports[`expressions > boolean expressions > comparators > range < < 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_<_<",
}
`;

exports[`expressions > boolean expressions > comparators > range < <= 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_<_<=",
}
`;

exports[`expressions > boolean expressions > comparators > range <= < 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_<=_<",
}
`;

exports[`expressions > boolean expressions > comparators > range <= <= 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_<=_<=",
}
`;

exports[`expressions > boolean expressions > comparators > range > > 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_>_>",
}
`;

exports[`expressions > boolean expressions > comparators > range > >= 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_>_>=",
}
`;

exports[`expressions > boolean expressions > comparators > range >= > 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_>=_>",
}
`;

exports[`expressions > boolean expressions > comparators > range >= >= 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_>=_>=",
}
`;

exports[`expressions > boolean expressions > deep equal 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "===",
}
`;

exports[`expressions > boolean expressions > deep not equal 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "!==",
}
`;

exports[`expressions > boolean expressions > equal 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "==",
}
`;

exports[`expressions > boolean expressions > in 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "in",
}
`;

exports[`expressions > boolean expressions > is 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > boolean expressions > not 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "!",
}
`;

exports[`expressions > boolean expressions > not equal 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "!=",
}
`;

exports[`expressions > boolean expressions > or 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "or",
}
`;

exports[`expressions > data structures > field access 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "y",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "access",
}
`;

exports[`expressions > data structures > field access dynamic 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "y",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "accessDynamic",
}
`;

exports[`expressions > data structures > map 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "label",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 4,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "label",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "map",
}
`;

exports[`expressions > data structures > produces correct tree for '(-(2+7)/A,j, i, 127.0 )' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "number",
                                  "value": 2,
                                },
                                {
                                  "children": [],
                                  "data": {},
                                  "name": "number",
                                  "value": 7,
                                },
                              ],
                              "data": {},
                              "name": "operator",
                              "value": "+",
                            },
                          ],
                          "data": {},
                          "name": "group",
                          "value": "parens",
                        },
                      ],
                      "data": {},
                      "name": "operator",
                      "value": "negate",
                    },
                    {
                      "children": [],
                      "data": {},
                      "name": "name",
                      "value": "A",
                    },
                  ],
                  "data": {},
                  "name": "operator",
                  "value": "/",
                },
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "j",
                },
              ],
              "data": {},
              "name": "operator",
              "value": ",",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "i",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 127,
        },
      ],
      "data": {},
      "name": "operator",
      "value": ",",
    },
  ],
  "data": {},
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > data structures > record 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "label",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "label",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "record",
}
`;

exports[`expressions > data structures > set 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 2,
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "set",
}
`;

exports[`expressions > data structures > symbol 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "symbol",
}
`;

exports[`expressions > data structures > tuple 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 1,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 2,
    },
  ],
  "data": {},
  "name": "operator",
  "value": ",",
}
`;

exports[`expressions > data structures > unit 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "placeholder",
    },
  ],
  "data": {},
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > fixity expressions > group 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 1,
    },
  ],
  "data": {},
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > fixity expressions > infix 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > fixity expressions > mixfix 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 789,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "inRange_<_<",
}
`;

exports[`expressions > fixity expressions > name 1`] = `
{
  "children": [],
  "data": {},
  "name": "name",
  "value": "name",
}
`;

exports[`expressions > fixity expressions > postfix 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "postfixDecrement",
}
`;

exports[`expressions > fixity expressions > prefix 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "negate",
}
`;

exports[`expressions > function expressions > application > function call 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "f",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > function call multiple args 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "f",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "application",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "y",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send 1 2)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "send",
                },
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 1,
                },
              ],
              "data": {},
              "name": "operator",
              "value": "application",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "application",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send 1)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "send",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "application",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "send",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'a + send (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "a",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "send",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 2,
                },
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 3,
                },
              ],
              "data": {},
              "name": "operator",
              "value": ",",
            },
          ],
          "data": {},
          "name": "group",
          "value": "parens",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "application",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'a + send 1 + 2' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "a",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "send",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "application",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "+",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 2,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send 1 (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send 1 + 2' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "application",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 2,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send a (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "a",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send((1+2), 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "data": {},
                      "name": "number",
                      "value": 1,
                    },
                    {
                      "children": [],
                      "data": {},
                      "name": "number",
                      "value": 2,
                    },
                  ],
                  "data": {},
                  "name": "operator",
                  "value": "+",
                },
              ],
              "data": {},
              "name": "group",
              "value": "parens",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "send",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "send",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > function 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "->",
}
`;

exports[`expressions > function expressions > function multiple params 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "y",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "y",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "+",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "fn",
}
`;

exports[`expressions > pattern matching > binding visible in scope where it is true 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "a",
                },
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "b",
                },
              ],
              "data": {},
              "name": "operator",
              "value": ",",
            },
          ],
          "data": {},
          "name": "group",
          "value": "parens",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "is",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "a",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "==",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "and",
}
`;

exports[`expressions > pattern matching > in function parameters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "y",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "y",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "+",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "->",
}
`;

exports[`expressions > pattern matching > match 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "->",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 4,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "->",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "match",
}
`;

exports[`expressions > pattern matching > match newline inside 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "->",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 4,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "->",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "match",
}
`;

exports[`expressions > pattern matching > with 'is' operator 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > pattern matching > with placeholder 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > pattern matching > with rest value 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "b",
                },
              ],
              "data": {},
              "name": "operator",
              "value": "...",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > pattern matching > with rest value first 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "b",
                },
              ],
              "data": {},
              "name": "operator",
              "value": "...",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > pattern matching > with variable value 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "a",
                },
              ],
              "data": {},
              "name": "operator",
              "value": "#",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > structured programming > block 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block mutable variable declaration 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "mut",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 123,
        },
      ],
      "data": {},
      "name": "operator",
      "value": ":=",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block pattern matching 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "y",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 123,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 456,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "=",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block variable assignment 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 123,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "=",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block variable declaration 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 123,
        },
      ],
      "data": {},
      "name": "operator",
      "value": ":=",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > expression-label 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 123,
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 456,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "+",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 789,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "label",
}
`;

exports[`expressions > structured programming > for loop 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 1,
                },
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 2,
                },
              ],
              "data": {},
              "name": "operator",
              "value": ",",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "brackets",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "for",
}
`;

exports[`expressions > structured programming > for loop newline 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 1,
                },
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 2,
                },
              ],
              "data": {},
              "name": "operator",
              "value": ",",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 3,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "group",
      "value": "brackets",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "for",
}
`;

exports[`expressions > structured programming > if-then 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "if",
}
`;

exports[`expressions > structured programming > if-then newline 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "if",
}
`;

exports[`expressions > structured programming > if-then newline-else 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "ifElse",
}
`;

exports[`expressions > structured programming > if-then newline-else newline 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "ifElse",
}
`;

exports[`expressions > structured programming > if-then-else 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 456,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "ifElse",
}
`;

exports[`expressions > structured programming > if-then-elseif-then-else 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "false",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 789,
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 456,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "ifElse",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "ifElse",
}
`;

exports[`expressions > structured programming > labeled expression 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "label",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "label",
}
`;

exports[`expressions > structured programming > return 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "placeholder",
        },
      ],
      "data": {},
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 123,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "return",
        },
      ],
      "data": {},
      "name": "group",
      "value": "braces",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "->",
}
`;

exports[`expressions > structured programming > while loop 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "data": {},
      "name": "number",
      "value": 123,
    },
  ],
  "data": {},
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > structured programming > while loop break 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "placeholder",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "break",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > structured programming > while loop break value 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "break",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > structured programming > while loop continue 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "placeholder",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "continue",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > structured programming > while loop continue value 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "true",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "continue",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > values > false 1`] = `
{
  "children": [],
  "data": {},
  "name": "name",
  "value": "false",
}
`;

exports[`expressions > values > number 1`] = `
{
  "children": [],
  "data": {},
  "name": "number",
  "value": 123,
}
`;

exports[`expressions > values > string 1`] = `
{
  "children": [],
  "data": {},
  "name": "string",
  "value": "string",
}
`;

exports[`expressions > values > true 1`] = `
{
  "children": [],
  "data": {},
  "name": "name",
  "value": "true",
}
`;

exports[`newline handling > block newline at the beginning 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`newline handling > block newline at the end 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "b",
                },
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 2,
                },
              ],
              "data": {},
              "name": "operator",
              "value": ":=",
            },
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ";",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`newline handling > block newline in the middle 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`newline handling > block semicolon newline 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`newline handling > block semicolon newline at the end 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "name": "name",
                  "value": "b",
                },
                {
                  "children": [],
                  "data": {},
                  "name": "number",
                  "value": 2,
                },
              ],
              "data": {},
              "name": "operator",
              "value": ":=",
            },
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ";",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ";",
    },
  ],
  "data": {},
  "name": "group",
  "value": "braces",
}
`;

exports[`programs > module > export main 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "args",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
          ],
          "data": {},
          "name": "group",
          "value": "braces",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "->",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "export",
}
`;

exports[`programs > module > external 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "y",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "external",
}
`;

exports[`programs > module > import 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "b",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "import",
}
`;

exports[`programs > module > import with 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "b",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "c",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "importWith",
}
`;

exports[`programs > module > import with external 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "b",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "c",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "external",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "importWith",
}
`;

exports[`programs > module > operator 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "operator",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "y",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "y",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "fn",
    },
  ],
  "data": {},
  "name": "operator",
  "value": ":=",
}
`;

exports[`programs > module > operator with precedence 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "operatorPrecedence",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "y",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "y",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "fn",
    },
  ],
  "data": {},
  "name": "operator",
  "value": ":=",
}
`;

exports[`programs > module > operator with tuple precedence 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
            {
              "children": [],
              "data": {},
              "name": "placeholder",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 2,
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "operatorPrecedence",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "y",
            },
          ],
          "data": {},
          "name": "operator",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "y",
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "fn",
    },
  ],
  "data": {},
  "name": "operator",
  "value": ":=",
}
`;

exports[`programs > module > private declare 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "z",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "y",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 1,
        },
      ],
      "data": {},
      "name": "operator",
      "value": "+",
    },
  ],
  "data": {},
  "name": "operator",
  "value": ":=",
}
`;

exports[`programs > module > public declare 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "name",
              "value": "z",
            },
            {
              "children": [],
              "data": {},
              "name": "number",
              "value": 123,
            },
          ],
          "data": {},
          "name": "operator",
          "value": "+",
        },
      ],
      "data": {},
      "name": "operator",
      "value": ":=",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "export",
}
`;

exports[`programs > script > export 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "export",
}
`;

exports[`programs > script > export as 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "y",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "exportAs",
}
`;

exports[`programs > script > use 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "b",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "use",
}
`;

exports[`programs > script > use with 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {},
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "b",
    },
    {
      "children": [],
      "data": {},
      "name": "name",
      "value": "x",
    },
  ],
  "data": {},
  "name": "operator",
  "value": "useWith",
}
`;

exports[`programs > script > variable export 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 123,
        },
      ],
      "data": {},
      "name": "operator",
      "value": ":=",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "export",
    },
  ],
  "data": {},
  "name": "operator",
  "value": ";",
}
`;

exports[`programs > script > variable export as 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 123,
        },
      ],
      "data": {},
      "name": "operator",
      "value": ":=",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "y",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "exportAs",
    },
  ],
  "data": {},
  "name": "operator",
  "value": ";",
}
`;

exports[`programs > script > variable use 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 123,
        },
      ],
      "data": {},
      "name": "operator",
      "value": ":=",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "b",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "use",
    },
  ],
  "data": {},
  "name": "operator",
  "value": ";",
}
`;

exports[`programs > script > variable use with 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "data": {},
          "name": "number",
          "value": 123,
        },
      ],
      "data": {},
      "name": "operator",
      "value": ":=",
    },
    {
      "children": [
        {
          "children": [],
          "data": {},
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "b",
        },
        {
          "children": [],
          "data": {},
          "name": "name",
          "value": "x",
        },
      ],
      "data": {},
      "name": "operator",
      "value": "useWith",
    },
  ],
  "data": {},
  "name": "operator",
  "value": ";",
}
`;
